feat: add truthful Home program wallboard
